# hello-sparse-blas

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  config_cmake_intel_levante  config_cmake_intel_ubuntu  config_cmake_levante  first_steps.mod  fpm.toml  package-lock.json  package.json  square_mod.mod  test_spblas.f90
.github/workflows/: ci.yml
cmake/: Config.cmake.in  HelloSPBLASConfig.cmake.in  build_submodule.cmake  config.cmake.in  helper.cmake  template.pc
config/: gfortran_ubuntu_test_drive  intel_levante  intel_levante_pfunit  intel_levante_spblas  intel_levante_spblas_fftpack  intel_ubuntu  intel_ubuntu_pfunit  intel_ubuntu_spblas  intel_ubuntu_test_drive  intel_ubuntu_test_drive_fftpack_spblas
dependencies/: CMakeLists.txt
dependencies/pFUnit/: CMakeLists.txt
dependencies/test-drive/: CMakeLists.txt
doc/: CMakeLists.txt  Doxyfile.in  mainpage.md
src/: CMakeLists.txt  first_steps.f90  mo_dummy.f90  mo_square.f90  square.f90
test/: CMakeLists.txt  test_drive_tester.f90  test_first_steps.f90  test_spblas.f90  test_spsolve.f90  test_square.pf  test_square_with_test_drive.f90
test/downstream_project/: CMakeLists.txt  hello.f90
test/downstream_project/config/: extern  local
test/pFUnit/: CMakeLists.txt
tmp/: CMakeLists.txt
